--- a/aboutMeCSS.css
+++ b/aboutMeCSS.css
@@ -2,14 +2,13 @@ main, body, html {
     height: 100%;
     margin: 0;
 }
-#openingText {
+#title {
     position: absolute;
     color: rgb(252, 252, 252);
     padding: 5px;
-    bottom: 45%;
-    position: absolute;
+    top: 15%;
     font-size: 125px;
-    text-align: center;
+    font-family: 'Roboto Mono', monospace;
 }
 .bg { 
     /* The image used */
