--- a/aboutMeCSS.css
+++ b/aboutMeCSS.css
@@ -1,13 +1,24 @@
 main, body, html {
     height: 100%;
     margin: 0;
+    font-size: 5px;
 }
+h1 { font-size: 3em !important;}
+h2 { font-size: 2.5em !important; }
+h3 { 
+    font-size: 2em !important;
+    color: blue; 
+}
+h4 { font-size: 1.5em !important; }
+h5 { font-size: 1em !important; }
 #title {
     position: absolute;
     color: rgb(252, 252, 252);
     padding: 5px;
     top: 15%;
-    font-size: 125px;
+    font-size: 3.5em !important;
+    /*font-size: calc(100% + 3vw + 3vh);*/
+    /*font-size: 125px;*/
     font-family: 'Roboto Mono', monospace;
 }
 .bg { 
@@ -25,3 +36,32 @@ main, body, html {
     display: flex;
     justify-content: center;
   }
+/* Extra small devices (phones, 600px and down) */
+@media (max-width: 600px){
+    main, body {font-size:8px;}
+    #title {top: 35%;}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media (min-width: 600px) {
+    main, body {font-size:12px;}
+    #title {top: 35%;}
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media (min-width: 768px) {
+    main, body {font-size:17px;}
+    #title {top: 15%;}
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 992px) {
+    main, body {font-size:20px;}
+    #title {top: 15%;}
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    main, body {font-size: 25px;}
+    #title {top: 15%;}
+}
