--- a/aboutMeCSS.css
+++ b/aboutMeCSS.css
@@ -7,10 +7,10 @@ h1 { font-size: 3em !important;}
 h2 { font-size: 2.5em !important; }
 h3 { 
     font-size: 2em !important;
-    color: blue; 
+    color: cornflowerblue;
 }
 h4 { font-size: 1.5em !important; }
-h5 { font-size: 1em !important; }
+p { font-size: 0.85em !important; }
 #title {
     position: absolute;
     color: rgb(252, 252, 252);
@@ -20,6 +20,10 @@ h5 { font-size: 1em !important; }
     /*font-size: calc(100% + 3vw + 3vh);*/
     /*font-size: 125px;*/
     font-family: 'Roboto Mono', monospace;
+}
+.test
+{
+    opacity:0;
 }
 .bg { 
     /* The image used */
