--- a/mainPageCSS.css
+++ b/mainPageCSS.css
@@ -1,5 +1,6 @@
 img.aboutMe {
     object-fit: cover;
+    box-shadow: -3px 3px 5px 3px #131313;
 }
 h1 {
     font-size: 4em;
@@ -25,6 +26,9 @@ h3 {
     position: relative;
     display: flex;
     justify-content: center;
+      /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
 }
 .fadeIn, .slideFromLeft, .slideFromRight
 {
