--- a/indexCSS.css
+++ b/indexCSS.css
@@ -14,7 +14,7 @@ h3 {
 }
 .titleBackground { 
     /* The image used */
-    background-image: linear-gradient(rgba(0, 0, 128,0.5), rgba(0, 0, 128,0.5)), url("profile.jpg");
+    background-image: linear-gradient(rgba(0, 0, 128,0.5), rgba(0, 0, 128,0.5)), url("Assets/profile.jpg");
   
     /* Full height */
     height: 100%; 
