--- a/programCSS.css
+++ b/programCSS.css
@@ -6,7 +6,7 @@
     text-align: center;
 }
 h1 {
-  font-size: 10vh !important;
+  font-size: 8vmin !important;
   
 }
 h2 {
@@ -30,7 +30,8 @@ a {
     background-position: center;
     padding-right: 20px;
     padding-left: 20px;
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 .screenshot {
   box-shadow: -3px 3px 5px 3px #131313;
@@ -41,6 +42,6 @@ a {
   height: auto;
 }
 .appIcon {
-  height: 15vh;
+  height: 15vmin;
   width: auto;
 }
