Decreased Programming Title Size

--- a/programCSS.css
+++ b/programCSS.css
@@ -1,5 +1,5 @@
 .title {
-    font-size: 5em !important;
+    font-size: 10vmin !important;
     /*font-size: calc(100% + 3vw + 3vh);*/
     /*font-size: 125px;*/
     font-family: 'Roboto Mono', monospace;
