--- a/indexCSS.css
+++ b/indexCSS.css
@@ -2,6 +2,13 @@ img.aboutMe {
     object-fit: cover;
     box-shadow: -3px 3px 5px 3px #131313;
 }
+.title {
+    font-size: 5em !important;
+    /*font-size: calc(100% + 3vw + 3vh);*/
+    /*font-size: 125px;*/
+    font-family: 'Roboto Mono', monospace;
+    text-align: center;
+}
 h1 {
     font-size: 4em;
 }
