--- a/indexCSS.css
+++ b/indexCSS.css
@@ -15,7 +15,17 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+.bio {
+    font-size: 20px;
+    font-family: 'Calibri', serif;
+    background: linear-gradient(141deg, rgb(55, 103, 121) 0%, rgb(64, 121, 140) 71%, rgb(55, 103, 121) 100%);;
+}
 
+#bioFullStackTitle {
+    font-size: 12vmin;
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+}
 
 .title {
     font-size: 12vmin;
